added catagory of questions

--- a/views/intro/index.ejs
+++ b/views/intro/index.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header') %>
-    <h1><%= title %></h1>
-    <p>Welcome to the<%= title %></p>
-    <a href="/games">See trivia questions</p>
+    <h1>Otriva</h1>
+    <p>Welcome to the Otriva</p>
+    <a href="/home">See trivia questions</p>
 <%- include('../partials/footer') %>
