--- a/views/intro/index.ejs
+++ b/views/intro/index.ejs
@@ -1,5 +1,18 @@
 <%- include('../partials/header') %>
-    <h1>Otriva</h1>
-    <p>Welcome to the Otriva</p>
-    <a href="/home">See trivia questions</p>
+    
+<div id="landing-page">
+    <div id="logo">
+      <img src="https://imagizer.imageshack.com/v2/500x200q90/923/GHHsNZ.png"/>
+    </div>
+    <div id="choose-mood">
+      <button class="big-button" onclick="location.href = '/home'">Party of One</button>
+      <button class="big-button" onclick="location.href = '/coming'">Join a Party</button>
+      <button class="big-button" onclick="location.href = '/coming'">Create a Party</button>
+    </div>
+    <div id="settings">
+      <button class="setting"><img src="https://imagizer.imageshack.com/img922/4830/RW4eT2.png"/></button>
+      <button class="setting"><img src="https://imagizer.imageshack.com/img924/1254/kuGFwD.png"></button>
+    </div>
+  </div>
+
 <%- include('../partials/footer') %>
