--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -45,7 +45,6 @@
     position: fixed;
     flex-direction: column;
     align-items: center;
-    width: 100%;
     bottom: 20px;
   }
   
@@ -135,17 +134,49 @@
     background: var(--colorShadeE);
     transform: translate(0, 0.375em);
   }
-  
 
+#catagories{
+  display: flex;
+  flex-wrap: wrap;
+}
+  .category{
+    margin: 10px;
+    border: 2px black solid; 
+    border-radius: 5%;
+    width: 300px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .category p{
+      border: 1px solid black; 
+  }
+  .category img {
+      width: 100px;
+      height: 100px;
+      float: left;
+      margin-right: 15px;
+      background: white;
+      border: 1px solid black;
+      border-radius: 50%;
+  }
+
+#levels{
+  border: 1px blue solid;
+  height: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 #questions{
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-.question{
-  font-weight: bold;
-}
+  .question{
+    font-weight: bold;
+  }
 
-.choices{
-  margin-right: 5px;
-}
+  .choices{
+    margin-right: 5px;
+  }
