--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -108,7 +108,7 @@
   }
   
   #settings{
-    width: 90%;
+    width: 100%;
     position: fixed;
     bottom: 5px;
     display: flex;
@@ -135,31 +135,47 @@
     transform: translate(0, 0.375em);
   }
 
-#catagories{
+#category-page{
+  width: 100%;
+  font-family: 'OpenSans', sans-serif;
+    font-size: 10px;
+    line-height: 1.6;
   display: flex;
-  flex-wrap: wrap;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
 }
-  .category{
-    margin: 10px;
-    border: 2px black solid; 
-    border-radius: 5%;
-    width: 300px;
+  #categories{
+    border: 2px var(--colorShadeB) solid; 
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
   }
-  .category p{
-      border: 1px solid black; 
-  }
-  .category img {
-      width: 100px;
-      height: 100px;
-      float: left;
-      margin-right: 15px;
-      background: white;
-      border: 1px solid black;
-      border-radius: 50%;
-  }
+    .category{
+      margin: 10px;
+      border: 2px black solid; 
+      border-radius: 5%;
+      width: 300px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      background-color: var(--colorShadeE);
+    }
+      .category:hover{
+        cursor: pointer;
+      }
+    .category p{
+        color: var(--colorShadeA);  
+    }
+    .category img {
+        width: 100px;
+        height: 100px;
+        float: left;
+        margin-right: 15px;
+        background: white;
+        border: 1px solid black;
+        border-radius: 50%;
+    }
 
 #levels{
   border: 1px blue solid;
