--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -20,6 +20,77 @@
     margin: 0;
     background: var(--backgroundColor);
   }
+
+  @font-face{
+    font-family: 'Retro';
+    src: url(NineteenNinetySeven-11XB.ttf);
+}
+
+  #box{
+    text-align: center;
+    margin: 4% 3%;
+    font-family: 'Retro';
+}
+
+  #head, #head-top {
+    display: flex;
+      justify-content: center;
+ }
+
+   #head-top{
+    background-color: var(--colorShadeB);
+    height: 10vh;
+    width: auto;
+  }
+
+   #prompt {
+    color: var(--colorShadeB);
+    font-size: 18pt;
+    text-align: center;
+  }
+
+    .profile {
+      height: fit-content;
+      width: fit-content;
+      border: var(--colorShadeA) solid 2px;
+        border-radius: 50%;
+      background-color: var(--colorShadeB);
+      margin: auto;
+    }
+
+        .profile img{
+            border-radius: 50%;
+        }
+
+        #content{
+            border-radius: 20px;
+        }
+
+        .user-info{
+          display: flex;
+            justify-content: center;
+        }
+
+        .user-info li {
+            margin: 2%; 
+            list-style-type: none;
+        }
+
+          #username{
+              border: var(--colorShadeE) solid 3px;
+                border-radius: 20px;
+              height: 3vh;
+          }
+
+          .btn {
+              width: 250px;
+              height: 30px;
+              background-color: var(--colorShadeE);
+              border-radius: 12px;
+              border: var(--colorShadeC) solid 3px;
+          }
+
+
   #landing-page{
     height:100vh;
     width: 100%;
@@ -62,12 +133,12 @@
       color:var(--colorShadeA);
     font-weight: 700;
     text-transform: uppercase;
-    font-family: inherit;
-     padding: 0.5em 0.5em;
-     border: 2px solid var(--colorShadeA);
-    border-radius: 1em;
+    font-family: 'Retro';
+    padding: 0.5em 0.5em;
+    border: 2px solid var(--colorShadeA);
+      border-radius: 1em;
     background: var(--colorShadeE);
-  transform-style: preserve-3d;
+    transform-style: preserve-3d;
      transition: all 175ms cubic-bezier(0, 0, 1, 1);
   }
   button.big-button::before {
@@ -137,7 +208,6 @@
 
 #category-page{
   width: 100%;
-  font-family: 'OpenSans', sans-serif;
     font-size: 10px;
     line-height: 1.6;
   display: flex;
@@ -146,53 +216,76 @@
           justify-content: center;
 }
   #categories{
-    border: 2px var(--colorShadeB) solid; 
+    width: 70%;
+    z-index: 1;
+    position: relative;
+    background-color: purple;
+    border: 10px solid var(--colorShadeB);
+      border-radius: 37px;
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+      justify-content: space-between;
+      flex-direction: column;
   }
+    #categories::after{
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      border-top: 100px solid var(--colorShadeB);
+      border-left: 100px solid var(--colorShadeA);
+      width: 0;
+    }
     .category{
-      margin: 10px;
-      border: 2px black solid; 
-      border-radius: 5%;
-      width: 300px;
+      margin: 20px;
+      margin-left: 50px;
+      border: 2px var(--colorShadeB) solid; 
+      border-left: none;
+      width: 450px;
       display: flex;
       flex-direction: row;
       align-items: center;
-      background-color: var(--colorShadeE);
+      font-family: 'Retro';
+      font-size: 15px;
+      color: var(--colorShadeE); 
+      background-color: var(--colorShadeA);
     }
       .category:hover{
         cursor: pointer;
+        background-color: var(--colorShadeE);
+        color: var(--colorShadeA); 
       }
-    .category p{
-        color: var(--colorShadeA);  
-    }
-    .category img {
-        width: 100px;
-        height: 100px;
-        float: left;
-        margin-right: 15px;
-        background: white;
-        border: 1px solid black;
-        border-radius: 50%;
-    }
 
-#levels{
-  border: 1px blue solid;
-  height: 70%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+      .category img {
+          width: 100px;
+          height: 100px;
+          float: left;
+          margin-right: 15px;
+          background: var(--colorShadeB) ;
+          border: 2px dotted var(--colorShadeE);
+          /* border-radius: 50%; */
+      }
+
+fieldset{
+  margin:20px 20px 20px 20px;
+  width:90%;
+  background-color: var(--colorShadeB);
+  border-radius: 20px;
 }
+  fieldset .question{
+    background-color: var(--colorShadeE);
+    font-family: 'Retro';
+    font-size: 12px;
 
-#questions{
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-  .question{
-    font-weight: bold;
   }
 
-  .choices{
-    margin-right: 5px;
+  form .big-button{
+    text-align: center;
+    margin: 20px 35%;
   }
+    form .big-button:hover{
+      background-color: var(--colorShadeB);
+    }
+
+.choices{
+  font: 10px 'Retro';
+}
