--- a/views/intro/index.ejs
+++ b/views/intro/index.ejs
@@ -5,13 +5,13 @@
       <img src="https://imagizer.imageshack.com/v2/500x200q90/923/GHHsNZ.png"/>
     </div>
     <div id="choose-mood">
-      <button class="big-button" onclick="location.href = '/home'">Party of One</button>
+      <button class="big-button" onclick="location.href = '/home'">Chill Mood</button>
+      <button class="big-button" onclick="location.href = '/coming'">Party of One</button>
       <button class="big-button" onclick="location.href = '/coming'">Join a Party</button>
-      <button class="big-button" onclick="location.href = '/coming'">Create a Party</button>
     </div>
     <div id="settings">
       <button class="setting"><img src="https://imagizer.imageshack.com/img922/4830/RW4eT2.png"/></button>
-      <button class="setting"><img src="https://imagizer.imageshack.com/img924/1254/kuGFwD.png"></button>
+      <button class="setting"><img src="https://imagizer.imageshack.com/v2/100x150q90/922/1gOV5O.png"></button>
     </div>
   </div>
 
