--- a/views/intro/select.ejs
+++ b/views/intro/select.ejs
@@ -42,7 +42,7 @@ imgArray[23] = 'https://imagizer.imageshack.com/v2/150x100q90/923/P8DCWW.png';
     </div>
     <div id="settings">
         <button class="setting"><img src="https://imagizer.imageshack.com/img922/4830/RW4eT2.png"/></button>
-        <button class="setting"><img src="https://imagizer.imageshack.com/img924/1254/kuGFwD.png"></button>
+        <button class="setting"><img src="https://imagizer.imageshack.com/v2/100x150q90/922/1gOV5O.png"></button>
     </div>
 </div>
 <%- include('../partials/footer') %>
