--- a/views/intro/index.ejs
+++ b/views/intro/index.ejs
@@ -1,18 +1,20 @@
 <%- include('../partials/header') %>
-    
 <div id="landing-page">
     <div id="logo">
       <img src="https://imagizer.imageshack.com/v2/500x200q90/923/GHHsNZ.png"/>
     </div>
     <div id="choose-mood">
-      <button class="big-button" onclick="location.href = '/home'">Chill Mood</button>
-      <button class="big-button" onclick="location.href = '/coming'">Party of One</button>
+      <button class="big-button" onclick="location.href = '/chillcategories'">Chill Mode</button>
+      <button class="big-button" onclick="location.href = '/partycategories'">Party of One</button>
       <button class="big-button" onclick="location.href = '/coming'">Join a Party</button>
     </div>
     <div id="settings">
       <button class="setting"><img src="https://imagizer.imageshack.com/img922/4830/RW4eT2.png"/></button>
-      <button class="setting"><img src="https://imagizer.imageshack.com/v2/100x150q90/922/1gOV5O.png"></button>
+      <button class="setting"><img id="useravatar"src="https://imagizer.imageshack.com/v2/100x150q90/922/1gOV5O.png"></button>
     </div>
   </div>
 
+  <script>
+    document.getElementById('useravatar').setAttribute('src', localStorage.getItem('avatar'));
+  </script>
 <%- include('../partials/footer') %>
