--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,5 +4,6 @@
     <meta charset="UTF-8">
     <title>OTrivia</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
